--- a/zeno_driver/config/joint_position_controllers.yaml
+++ b/zeno_driver/config/joint_position_controllers.yaml
@@ -1,6 +1,6 @@
 # Right leg
 
-r_hip_yaw_controller:
+r_hip_yaw_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -9,11 +9,11 @@ r_hip_yaw_controller:
     joint_speed: 1.17
     motor:
         id: 1
-        init: 108
-        min: 338
+        init: 143
+        min: 330
         max: 0
 
-r_hip_roll_controller:
+r_hip_roll_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -22,11 +22,11 @@ r_hip_roll_controller:
     joint_speed: 1.0
     motor:
         id: 2
-        init: 526
-        min: 664
-        max: 432
+        init: 496
+        min: 646
+        max: 424
 
-r_hip_pitch_controller:
+r_hip_pitch_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -35,11 +35,11 @@ r_hip_pitch_controller:
     joint_speed: 1.0
     motor:
         id: 3
-        init: 397
-        min: 694
-        max: 397
+        init: 458
+        min: 694 
+        max: 396
 
-r_knee_pitch_controller:
+r_knee_pitch_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -49,11 +49,11 @@ r_knee_pitch_controller:
     torque_enable: false
     motor:
         id: 4
-        init: 837
-        min: 311
-        max: 837
+        init: 524
+        min: 324
+        max: 762
 
-r_ankle_pitch_controller:
+r_ankle_pitch_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -63,11 +63,11 @@ r_ankle_pitch_controller:
     torque_enable: false
     motor:
         id: 5
-        init: 460
-        min: 460
-        max: 852
+        init: 547
+        min: 530
+        max: 859
 
-r_ankle_roll_controller:
+r_ankle_roll_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -76,13 +76,14 @@ r_ankle_roll_controller:
     joint_speed: 5.0
     motor:
         id: 6
-        init: 390
-        min: 390
-        max: 542
+        init: 320
+        min: 230
+        max: 375
+
 
 # Left leg
 
-l_hip_yaw_controller:
+l_hip_yaw_controller: #Motor not working?
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -95,7 +96,7 @@ l_hip_yaw_controller:
         min: 145
         max: 549
 
-l_hip_roll_controller:
+l_hip_roll_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -104,11 +105,11 @@ l_hip_roll_controller:
     joint_speed: 1.0
     motor:
         id: 8
-        init: 511
-        min: 582
-        max: 362
+        init: 503
+        min: 577
+        max: 360
 
-l_hip_pitch_controller:
+l_hip_pitch_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -117,11 +118,11 @@ l_hip_pitch_controller:
     joint_speed: 1.0
     motor:
         id: 9
-        init: 891
-        min: 588
-        max: 891
+        init: 504
+        min: 280
+        max: 587
 
-l_knee_pitch_controller:
+l_knee_pitch_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -130,11 +131,11 @@ l_knee_pitch_controller:
     joint_speed: 1.0
     motor:
         id: 10
-        init: 832
-        min: 832
-        max: 275
+        init: 485
+        min: 714
+        max: 276
 
-l_ankle_pitch_controller:
+l_ankle_pitch_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -143,11 +144,11 @@ l_ankle_pitch_controller:
     joint_speed: 5.0
     motor:
         id: 11
-        init: 220
-        min: 220
-        max: 618
+        init: 532
+        min: 280
+        max: 596
 
-l_ankle_roll_controller:
+l_ankle_roll_controller: #Done
     controller:
         package: dynamixel_controllers
         module: joint_position_controller
@@ -156,6 +157,6 @@ l_ankle_roll_controller:
     joint_speed: 5.0
     motor:
         id: 12
-        init: 291
-        min: 291
-        max: 430
+        init: 359
+        min: 290
+        max: 451
