--- a/zeno_driver/launch/zeno_pololu_motors.yaml
+++ b/zeno_driver/launch/zeno_pololu_motors.yaml
@@ -54,7 +54,7 @@ eyelid_joint:
     max_angle: 50
 
 
-eye_up_joint:
+eye_vertical_joint:
   pololu_id: 24
   motor_id: 5
   min: 992
@@ -68,7 +68,7 @@ eye_up_joint:
     max_angle: 50
 
 
-eye_joint:
+eye_horizontal_joint:
   pololu_id: 24
   motor_id: 6
   min: 1271
