--- a/zeno_driver/launch/zeno_target_controllers.yaml
+++ b/zeno_driver/launch/zeno_target_controllers.yaml
@@ -1,4 +1,3 @@
-
 zeno_gaze_controller:
   default_speed: 0.5
   default_acceleration: 0.1
@@ -12,4 +11,83 @@ zeno_gaze_controller:
     neck_pitch_joint:
       module: hri_common
       class: PololuJoint
+    neck_roll_joint:
+      module: hri_common
+      class: PololuJoint
 
+zeno_eyes_controller:
+  default_speed: 0.5
+  default_acceleration: 0.1
+  target_bone: eyes_target
+  target_topic: eyes_target
+  frame_id: base_link
+  joints:
+    eye_horizontal_joint:
+      module: hri_common
+      class: PololuJoint
+    eye_vertical_joint:
+      module: hri_common
+      class: PololuJoint
+
+zeno_right_arm_controller:
+  default_speed: 0.5
+  default_acceleration: 0.1
+  target_bone: r_gripper_target
+  target_topic: r_gripper_target
+  frame_id: base_link
+  joints:
+    r_shoulder_pitch_joint:
+      module: hri_common
+      class: PololuJoint
+    r_shoulder_roll_joint:
+      module: hri_common
+      class: PololuJoint
+    r_elbow_roll_joint:
+      module: hri_common
+      class: PololuJoint
+    r_elbow_roll_joint:
+      module: hri_common
+      class: PololuJoint
+    r_elbow_pitch_joint:
+      module: hri_common
+      class: PololuJoint
+    r_wrist_roll_joint:
+      module: hri_common
+      class: PololuJoint
+
+zeno_left_arm_controller:
+  default_speed: 0.5
+  default_acceleration: 0.1
+  target_bone: l_gripper_target
+  target_topic: l_gripper_target
+  frame_id: base_link
+  joints:
+    l_shoulder_pitch_joint:
+      module: hri_common
+      class: PololuJoint
+    l_shoulder_roll_joint:
+      module: hri_common
+      class: PololuJoint
+    l_elbow_roll_joint:
+      module: hri_common
+      class: PololuJoint
+    l_elbow_roll_joint:
+      module: hri_common
+      class: PololuJoint
+    l_elbow_pitch_joint:
+      module: hri_common
+      class: PololuJoint
+    l_wrist_roll_joint:
+      module: hri_common
+      class: PololuJoint
+
+zeno_torso_controller:
+  default_speed: 0.5
+  default_acceleration: 0.1
+  target_bone: torso_target
+  target_topic: torso_target
+  frame_id: base_link
+  joints:
+    torso_joint:
+      module: hri_common
+      class: PololuJoint
